# zyg-old

./: .gitignore  README.md  example.db  logging.yaml  pyproject.toml
data/: schema.sql
deprecated/: logger.py  schema.sql
deprecated/src/: app.py
deprecated/src/adapters/db/: __init__.py  adapters.py  entities.py  exceptions.py  respositories.py
deprecated/src/adapters/rpc/: exceptions.py
deprecated/src/adapters/tasker/: handlers.py
deprecated/src/adapters/web/: server.py
deprecated/src/application/commands/: slack.py
deprecated/src/domain/: exceptions.py  models.py
deprecated/src/services/: event.py  tenant.py  user.py
http/: dev.http
resources/: schema.sql
scripts/: celery.sh  dev.sh
src/: app.py  auth.py  config.py  logger.py  worker.py
src/adapters/db/: __init__.py  adapters.py  entities.py  exceptions.py  respositories.py  utils.py
src/adapters/rpc/: __init__.py  api.py  exceptions.py  ext.py
src/adapters/tasker/: __init__.py  init.py  tasks.py
src/adapters/web/: __init__.py  server.py
src/application/: exceptions.py
src/application/commands/: __init__.py  api.py  base.py  slack.py
src/application/repr/: __init__.py  api.py  slack.py
src/db/: entity.py  exceptions.py  repository.py  schema.py
src/domain/: models.py
src/domain/commands/: __init__.py  events.py  inbox.py
src/domain/models/: __init__.py
src/ext/: base.py  slack.py
src/models/: account.py  base.py  slack.py
src/services/: __init__.py  channel.py  event.py  events.py  exceptions.py  interaction.py  issue.py  tenant.py
src/services/channel/: __init__.py
src/services/event/: __init__.py  base.py  dispatcher.py  exceptions.py  message.py
src/services/events/: base.py  dispatcher.py
src/services/inbox/: __init__.py  base.py  channel.py  exceptions.py
src/services/issue/: __init__.py
src/services/task/: __init__.py
src/services/tasks/: __init__.py  event.py
src/services/tenant/: __init__.py
src/tasks/: event.py  notif.py  slack.py
src/web/: deps.py
src/web/routers/: accounts.py  events.py  workspaces.py
tests/services/: test_event.py
tests/unit/: test_event_model.py  test_inbox_model.py  test_issue.py
(+18 files in other folders)
