[tool.poetry]
name = "willow"
version = "0.1.0"
description = ""
authors = ["Sanchit Rk <sanchitrrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.7.0"
mypy = "^1.5.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
slack-sdk = "^3.21.3"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.0"
pylint = "^2.17.5"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
