[tool.poetry]
name = "zyg"
version = "0.1.0"
description = ""
authors = ["Sanchit Rk <sanchitrrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.7.0"
mypy = "^1.5.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
slack-sdk = "^3.21.3"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
asyncio = "^3.4.3"
celery = {extras = ["redis"], version = "^5.3.1"}
requests = "^2.31.0"
attrs = "^23.1.0"
httpx = "^0.24.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
